# third_pay

./: .gitignore  README  README.md  pfx轉pem工具.txt
1.平时工作事项文件/: 第三方支付問題處理表.doc
20180524优米付-Alex/document/: 优米付测试商户号.txt
20180524优米付-Alex/youmifu/: wxqqjdpost.php
alexChang/: README.md  gggggg.html  tt
all_pay_3.0v/Channel/: addsign.php  qqpost.php  wxpost.php  zfbpost.php
all_pay_3.0v/Move/: .gitignore  move.config.js  move.js  package-lock.json  package.json
all_pay_3.0v/NotifyCreate/: app.2b0f57a2.js  app.2b0f57a2.js.map  app.38be25be.css  app.4398995d.js  app.4398995d.js.map  app.80985fa9.css  app.d0c5918d.js  app.d0c5918d.js.map  chunk-vendors.18d1ab40.js  chunk-vendors.18d1ab40.js.map  index.html
all_pay_3.0v/PostCreate/: index.html
all_pay_3.0v/bker/: Bank_coder.php  Bank_coder_log.php
channel/: qqpost.php  wxpost.php  wxqqjdbdpost.php  zfbpost.php
common_pay/: README.md  SQL_pay_list升级语句.sql  SQL_pay_list升级语句.txt  all_bank_parameter.txt  common_notify_url改.php  common_post.php  common_return_url.php  moneyfunc.php  公版種類.txt
common_pay/pay_test/: index.php  mysql.config.php  mysql.user.php  refresh.php  refresh2.php
common_pay/pay_test_old/: index.php  mysql.config.php  mysql.func.php  mysql.user.php
common_pay/test/: index.html  (+2 more)
project/: README.md
project/20180702芒果支付/document/phpdemo/C++支付接口DEMO/: CMakeLists.txt  HttpRsaBuild.cpp  HttpRsaBuild.h  README  global.cpp  global.h  main.cpp  private_key_test.pem
未歸檔文檔/: ,三顺支付.txt  Bpaying支付.txt
远程测试文档/: ~$遠程測試說明.docx  后台口令卡.xlsx  第三方开发流程.docx
遠程測試文檔/: ~$后台口令卡.xlsx  遠程測試說明.docx
(+8452 files in other folders)
